z-index FIXED

--- a/src/common_components/NavBar.css
+++ b/src/common_components/NavBar.css
@@ -121,7 +121,6 @@
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #fff;
   width: 100%;
 }
 
@@ -133,13 +132,17 @@
   height: 100vh;
   background-color: #000;
   opacity: 0.8;
-  z-index: -1;
+  z-index: 1;
 }
 
 .NavBar .search-assist-content {
+  position: relative;
+  background-color: #fff;
+  z-index: 2;
   transform-origin: center top;
-  transform: scaleY(0);
-  animation: slideDown 0.3s ease-in-out forwards;
+  transform: scaleY(1);
+  /* animation: slideDown 0.3s ease-in-out forwards; */
+  transition: transform 0.3s ease-in-out;
 }
 
 @keyframes slideDown {
